testdata/baselines/reference/submodule/conformance/typeParameterAssignability2.errors.txt
typeParameterAssignability2.ts(5,5): error TS2322: Type 'T' is not assignable to type 'U'.
typeParameterAssignability2.ts(9,5): error TS2322: Type 'U' is not assignable to type 'T'.
typeParameterAssignability2.ts(14,5): error TS2322: Type 'U' is not assignable to type 'T'.
typeParameterAssignability2.ts(17,5): error TS2322: Type 'V' is not assignable to type 'T'.
typeParameterAssignability2.ts(20,5): error TS2322: Type 'V' is not assignable to type 'U'.
typeParameterAssignability2.ts(25,5): error TS2322: Type 'U' is not assignable to type 'T'.
typeParameterAssignability2.ts(26,5): error TS2322: Type 'V' is not assignable to type 'T'.
typeParameterAssignability2.ts(27,5): error TS2322: Type 'Date' is not assignable to type 'T'.
typeParameterAssignability2.ts(30,5): error TS2322: Type 'V' is not assignable to type 'U'.
typeParameterAssignability2.ts(31,5): error TS2322: Type 'Date' is not assignable to type 'U'.
typeParameterAssignability2.ts(35,5): error TS2322: Type 'Date' is not assignable to type 'V'.
typeParameterAssignability2.ts(45,5): error TS2322: Type 'U' is not assignable to type 'T'.
typeParameterAssignability2.ts(46,5): error TS2322: Type 'V' is not assignable to type 'T'.
typeParameterAssignability2.ts(47,5): error TS2322: Type 'Date' is not assignable to type 'T'.
typeParameterAssignability2.ts(50,5): error TS2322: Type 'V' is not assignable to type 'U'.
typeParameterAssignability2.ts(51,5): error TS2322: Type 'Date' is not assignable to type 'U'.
typeParameterAssignability2.ts(55,5): error TS2322: Type 'Date' is not assignable to type 'V'.
typeParameterAssignability2.ts(64,5): error TS2322: Type 'U' is not assignable to type 'T'.
typeParameterAssignability2.ts(65,5): error TS2322: Type 'V' is not assignable to type 'T'.
typeParameterAssignability2.ts(68,5): error TS2322: Type 'V' is not assignable to type 'U'.
typeParameterAssignability2.ts(70,5): error TS2322: Type 'T' is not assignable to type 'V'.
typeParameterAssignability2.ts(71,5): error TS2322: Type 'U' is not assignable to type 'V'.


==== typeParameterAssignability2.ts (22 errors) ====
    // type parameters are not assignable to one another unless directly or indirectly constrained to one another
    
    function foo<T, U extends T>(t: T, u: U) {
        t = u; // error
        u = t; // ok
        ~
!!! error TS2322: Type 'T' is not assignable to type 'U'.
!!! related TS2208 typeParameterAssignability2.ts:3:14: This type parameter might need an `extends U` constraint.
    }
    
    function foo2<T extends U, U>(t: T, u: U) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! related TS2208 typeParameterAssignability2.ts:8:28: This type parameter might need an `extends T` constraint.
        u = t; // ok
    }
    
    function foo3<T extends U, U extends V, V>(t: T, u: U, v: V) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
        u = t;
    
        t = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'T'.
!!! related TS2208 typeParameterAssignability2.ts:13:41: This type parameter might need an `extends T` constraint.
        v = t; // ok
    
        u = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'U'.
!!! related TS2208 typeParameterAssignability2.ts:13:41: This type parameter might need an `extends U` constraint.
        v = u; // ok
    }
    
    function foo4<T extends U, U extends V, V extends Date>(t: T, u: U, v: V) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
        t = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'T'.
        t = new Date(); // error
        ~
!!! error TS2322: Type 'Date' is not assignable to type 'T'.
    
        u = t;
        u = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'U'.
        u = new Date(); // error
        ~
!!! error TS2322: Type 'Date' is not assignable to type 'U'.
    
        v = t;
        v = u;
        v = new Date(); // ok
        ~
!!! error TS2322: Type 'Date' is not assignable to type 'V'.
    
        var d: Date;
        d = t; // ok
        d = u; // ok
        d = v; // ok
    }
    
    // same as foo4 with different type parameter ordering
    function foo5<V extends Date, U extends V, T extends U>(t: T, u: U, v: V) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
        t = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'T'.
        t = new Date(); // error
        ~
!!! error TS2322: Type 'Date' is not assignable to type 'T'.
    
        u = t;
        u = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'U'.
        u = new Date(); // error
        ~
!!! error TS2322: Type 'Date' is not assignable to type 'U'.
    
        v = t;
        v = u;
        v = new Date(); // ok
        ~
!!! error TS2322: Type 'Date' is not assignable to type 'V'.
    
        var d: Date;
        d = t; // ok
        d = u; // ok
        d = v; // ok
    }
    
    function foo6<T extends U, U, V>(t: T, u: U, v: V) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! related TS2208 typeParameterAssignability2.ts:63:28: This type parameter might need an `extends T` constraint.
        t = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'T'.
!!! related TS2208 typeParameterAssignability2.ts:63:31: This type parameter might need an `extends T` constraint.
    
        u = t; // ok
        u = v; // error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'U'.
!!! related TS2208 typeParameterAssignability2.ts:63:31: This type parameter might need an `extends U` constraint.
    
        v = t; // error
        ~
!!! error TS2322: Type 'T' is not assignable to type 'V'.
        v = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'V'.
!!! related TS2208 typeParameterAssignability2.ts:63:28: This type parameter might need an `extends V` constraint.
    }